tests/parser/function-declaration-left-paren-error.stderr
error: expected '('
 --> $DIR/function-declaration-left-paren-error.lox:1:6
  |
1 | fn f _() {}
  |      ^
